--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "create-dev-build-android-emulator": "eas build --profile android-development-client --platform android"
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-dev-client": "~2.4.8",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.12",
     "react": "18.2.0",
     "react-native": "0.72.4"
   },
